--- a/translations/dragoncurse_castle.tex/cs.po
+++ b/translations/dragoncurse_castle.tex/cs.po
@@ -91,7 +91,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:37 clash/dragoncurse_castle.tex:36
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Map Tile Pool:} None\n"
 "\n"
@@ -170,15 +170,12 @@ msgstr ""
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:19
-#, fuzzy, no-wrap
-#| msgid ""
-#| "This scenario is played over a maximum of 11 rounds.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "This Scenario is played over a maximum of 11 Rounds.\n"
 "\n"
 msgstr ""
-"Tento scénář se hraje na nejvýše 11 kol.\n"
+"Tento Scénář se hraje na nejvýše 11 Kol.\n"
 "\n"
 
 #. type: multicols*
@@ -203,13 +200,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:32
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 2 × A Pack \\svgunit{bronze} Units with the lowest recruitment cost\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -219,23 +210,13 @@ msgid ""
 msgstr ""
 "\\textbf{Počáteční Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Skupinu \\svgunit{bronze} jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item 2 × Skupinu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:47
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Map Setup}}\n"
-#| "Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 2 × Starting (I) Map tile\n"
-#| "  \\item 2 × Far (II-III) Map tile\n"
-#| "  \\item 5 × Near (IV-V) Map tile\n"
-#| "  \\item 2 × Center (VI-VII) Map tiles, blindly choosing one with the Random Town field and the other with a Dragon Utopia field.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
@@ -248,23 +229,18 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Příprava Mapy}}\n"
-"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve Scénáři:\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Startovní (I) Dílek Mapy\n"
 "  \\item 2 × Vzdálený (II-III) Dílek Mapy\n"
 "  \\item 5 × Blízký (IV-V) Dílek Mapy\n"
-"  \\item 2 × Středový (VI-VII) Dílky Mapy, náhodně vyberte jeden s polem Náhodného Města a druhý s polem Dračí Utopie.\n"
+"  \\item 2 × Středový (VI-VII) Dílky Mapy, náhodně vyberte jeden s Polem Náhodného Města a druhý s Polem Dračí Utopie.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:51
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
-#| "When the Random Town is captured for the first time, players continue playing the current round and then play \\textbf{one additional final round}.\n"
-#| "The player controlling the Random Town at the end of that final round is the winner.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "When the Random Town is captured for the first time, players continue playing the current Round and then play \\textbf{one additional final Round}.\n"
@@ -272,18 +248,13 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Podmínky Vítězství}}\n"
-"Když je Náhodné Město poprvé dobyto, hráči pokračují ve hře aktuálního kola a potom odehrají \\textbf{jedno další závěrečné kolo}.\n"
-"Hráč, který na konci tohoto závěrečného kola ovládá Náhodné Město, je vítězem.\n"
+"Když je Náhodné Město poprvé dobyto, hráči pokračují ve hře aktuálního Kola a potom odehrají \\textbf{jedno další závěrečné Kolo}.\n"
+"Hráč, který na konci tohoto závěrečného Kola ovládá Náhodné Město, je vítězem.\n"
 "\n"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:55
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
-#| "At the end of the \\nth{10} round, if no player controls the Random Town, both players lose the game (\\textit{the local ruler returns to the castle and regains control of the province}).\n"
-#| "However, if the Random Town is first captured in the \\nth{10} round, the game proceeds as normal to its additional final round (in this case, the \\nth{11} round).\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "At the end of the \\nth{10} Round, if no player controls the Random Town, both players lose the game (\\textit{the local ruler returns to the castle and regains control of the province}).\n"
@@ -291,8 +262,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Podmínky Porážky}}\n"
-"Na konci 10. kola, pokud žádný hráč neovládá Náhodné Město, oba hráči prohrávají hru (\\textit{místní vládce se vrací do hradu a znovu získává kontrolu nad provincií}).\n"
-"Pokud je ale Náhodné Město poprvé dobyto v 10. kole, hra pokračuje jako obvykle do svého dalšího závěrečného kola (v tomto případě 11. kolo).\n"
+"Na konci 10. Kola, pokud žádný hráč neovládá Náhodné Město, oba hráči prohrávají hru (\\textit{místní vládce se vrací do hradu a znovu získává kontrolu nad provincií}).\n"
+"Pokud je ale Náhodné Město poprvé dobyto v 10. Kole, hra pokračuje jako obvykle do svého dalšího závěrečného Kola (v tomto případě 11. Kolo).\n"
 "\n"
 
 #. type: multicols*
@@ -306,7 +277,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\textbf{4. a 8. kolo:}\n"
+"  \\textbf{4. a 8. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Odstraňte všechny Černé Kostičky z Vodních Kol a Větrných Mlýnů na mapě.\n"
 "  \\item Všichni Hrdinové získávají +1 \\svg{movement}\n"
@@ -315,24 +286,7 @@ msgstr ""
 
 #. type: multicols
 #: clash/dragoncurse_castle.tex:81
-#, fuzzy, no-wrap
-#| msgid ""
-#| "{2}\n"
-#| "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
-#| "During this scenario:\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Whenever an Obelisk is visited for the first time, the visiting player gains 2 \\svg{building_materials}\n"
-#| "  \\item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.\n"
-#| "  \\item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item Place a newly recruited Secondary Hero.\n"
-#| "      \\item Place the Main Hero when defeated.\n"
-#| "      \\item Temporarily transport the army to, for 8 \\svg{gold}, when the Random Town is attacked.\n"
-#| "    \\end{itemize}\n"
-#| "  \\item The first player to visit the Dragon Utopia (after defeating the defending Azure unit(s)) draws cards from the Neutral Units \\svgunit{azure} deck until a Dragon not associated with any faction is drawn.\n"
-#| "    The player may immediately recruit that Dragon for free.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "{2}\n"
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -353,9 +307,9 @@ msgid ""
 msgstr ""
 "{2}\n"
 "\\subsection*{\\MakeUppercase{Dodatečná Pravidla}}\n"
-"Během tohoto scénáře:\n"
+"Během tohoto Scénáře:\n"
 "\\begin{itemize}\n"
-"  \\item Kdykoli je Obelisk navštíven poprvé, hráč, který jej navštíví, získává 2 \\svg{building_materials}.\n"
+"  \\item Kdykoli je Obelisk Navštíven poprvé, hráč, který jej Navštíví, získává 2 \\svg{building_materials}.\n"
 "  \\item Náhodné Město je bráněno Zdmi a Bránou, když je vlastněno hráčem, ale má Střílnu pouze tehdy, pokud má hráč již Citadelu.\n"
 "  \\item Stejně jako jakékoli jiné Město, když je Náhodné Město vlastněno hráčem, je platným místem pro tohoto hráče k:\n"
 "    \\begin{itemize}\n"
@@ -363,7 +317,7 @@ msgstr ""
 "      \\item Umístění Hlavního Hrdiny po jeho porážce.\n"
 "      \\item Dočasnému transportu armády za 8~\\svg{gold}, když je Náhodné Město napadeno.\n"
 "    \\end{itemize}\n"
-"  \\item První hráč, který navštíví Dračí Utopii (po porážce bránící jednotky Azurového draka), dobere karty z balíčku Neutrálních Jednotek \\svgunit{azure}, dokud nebude nalezen Drak, který není spojený s žádnou frakcí.\n"
+"  \\item První hráč, který navštíví Dračí Utopii (po porážce bránící Jednotky Azurového draka), dobere karty z Balíčku Neutrálních Jednotek \\svgunit{azure}, dokud nebude nalezen Drak, který není spojený s žádnou Frakcí.\n"
 "    Hráč může okamžitě tohoto Draka zdarma Naverbovat.\n"
 "\\end{itemize}\n"
 "\n"
