--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -109,7 +109,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:33 coops/emerald_island.tex:30
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -139,26 +139,22 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:43 coops/emerald_island.tex:40
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):\n"
 "\n"
 msgstr ""
-"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři ($H$ znamená počet hráčů):\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve Scénáři ($H$ znamená počet hráčů):\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: coops/emerald_island.tex:3
-#, fuzzy
-#| msgid ""
-#| "\\addscenariosection{1}{Cooperative scenario}{Emerald Island}{\\images/"
-#| "logistics.png}"
 msgid ""
 "\\addscenariosection{1}{Cooperative Scenario}{Emerald Island}{\\images/"
 "logistics.png}"
 msgstr ""
-"\\addscenariosection{1}{Kooperativní scéná\\v{r}}{Smaragdový Ostrov}"
+"\\addscenariosection{1}{Kooperativní Scéná\\v{r}}{Smaragdový Ostrov}"
 "{\\images/logistics.png}"
 
 #. type: multicols*
@@ -189,15 +185,12 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:16
-#, fuzzy, no-wrap
-#| msgid ""
-#| "This scenario is played over 8 rounds.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "This Scenario is played over 8 Rounds.\n"
 "\n"
 msgstr ""
-"Tento scénář se hraje na 8 kol.\n"
+"Tento Scénář se hraje na 8 Kol.\n"
 "\n"
 
 #. type: multicols*
@@ -243,27 +236,17 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:34
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Map tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Map Tile Pool:} If you wish, you can distribute the II--III Tiles equally to each player rather than laying them out as proposed.\n"
 "\n"
 msgstr ""
-"\\textbf{Dílky Mapy na ruce:} Pokud si přejete, můžete dílky II--III rozdělit rovnoměrně mezi každého hráče, místo aby byly rozmístěny podle návrhu ve scénáři.\n"
+"\\textbf{Dílky Mapy na ruce:} Pokud si přejete, můžete Dílky II--III rozdělit rovnoměrně mezi každého hráče, místo aby byly rozmístěny podle návrhu ve Scénáři.\n"
 "\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:46
-#, fuzzy, no-wrap
-#| msgid ""
-#| "$\\boldsymbol{P}$ \\textbf{× Starting (I) Map tile}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Starting Tiles of your chosen factions.\n"
-#| "  \\item Ignore any yellow lines between tiles I (but not between tiles I and tiles II--III)\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "$\\boldsymbol{P}$ \\textbf{× Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
@@ -274,17 +257,14 @@ msgid ""
 msgstr ""
 "$\\boldsymbol{H}$ \\textbf{× Startovní (I) Dílek Mapy}\n"
 "\\begin{itemize}\n"
-"  \\item Startovní Dílky vašich vybraných frakcí.\n"
-"  \\item Ignorujte jakékoliv žluté čáry mezi dílky I (ale ne mezi dílky I a dílky II--III)\n"
+"  \\item Startovní Dílky vašich vybraných Frakcí.\n"
+"  \\item Ignorujte jakékoliv žluté čáry mezi Dílky I (ale ne mezi Dílky I a Dílky II--III)\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:48
-#, fuzzy, no-wrap
-#| msgid ""
-#| "$\\boldsymbol{4 P}$ \\textbf{× Far (II--III) Map tile}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "$\\boldsymbol{4 P}$ \\textbf{× Far (II--III) Map Tile}\n"
 "\n"
@@ -294,15 +274,12 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:52
-#, fuzzy, no-wrap
-#| msgid ""
-#| "Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "Flag all Mines and Settlements. (Don't forget the Building Materials Mine in Tile I. Each Tile II--III contains one Mine or Settlement with a Level III fight.)\n"
 "\n"
 msgstr ""
-"Obsaďte všechny Doly a Osady. (Nezapomeňte na Důl na Stavební Materiály na dílku I. Každý dílek II--III obsahuje jeden Důl nebo Osadu s bojem na úrovni III.)\n"
+"Obsaďte všechny Doly a Osady. (Nezapomeňte na Důl na Stavební Materiály na Dílku I. Každý Dílek II--III obsahuje jeden Důl nebo Osadu s Bojem na Úrovni III.)\n"
 "\n"
 
 #. type: multicols*
@@ -312,18 +289,12 @@ msgid ""
 "There are unflagged Mines or Settlements left in map at the end of Round 8.\n"
 "\n"
 msgstr ""
-"Na konci 8. kola zůstanou na mapě neobsazené Doly nebo Osady.\n"
+"Na konci 8. Kola zůstanou na mapě neobsazené Doly nebo Osady.\n"
 "\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:63
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{5} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Gain again the result of one field with a Black Cube.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{5} Round:}\n"
 "\\begin{itemize}\n"
@@ -331,37 +302,15 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{5. kolo:}\n"
+"\\textbf{5. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Získejte znovu výsledek jednoho pole s Černou Kostičkou.\n"
+"  \\item Získejte znovu výsledek jednoho Pole s Černou Kostičkou.\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:84
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
-#| "\\begin{itemize}\n"
-#| "    \\item You can't build a \\svgunit{golden} Dwelling.\n"
-#| "    \\item You can give Units to another player, even outside your turn, if one of your Heroes is:\n"
-#| "    \\begin{itemize}\n"
-#| "        \\item On the same Map tile as another player's Hero.\n"
-#| "        \\item In another player's Town.\n"
-#| "        \\item Next to another player's Hero.\n"
-#| "    \\end{itemize}\n"
-#| "    \\item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your faction's Unit pool (even if another player has one or more of your Units). This includes units you've previously given to another player.\n"
-#| "    \\item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.\n"
-#| "    \\item For the last Mine/Settlement battle, add a \\svgunit{golden} Neutral Unit. You have unlimited turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
-#| "    \\item The first time you reach level IV, gain your second specialty.\n"
-#| "    \\item When you reach level IV, move your token on the level tracker to level III.\n"
-#| "    \\item Additionally, no player can:\n"
-#| "    \\begin{itemize}\n"
-#| "        \\item Attack other Heroes.\n"
-#| "        \\item Capture a Mine or Settlement that is already Flagged.\n"
-#| "    \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\\begin{itemize}\n"
@@ -388,21 +337,21 @@ msgstr ""
 "\\subsection*{\\MakeUppercase{Dodatečná Pravidla}}\n"
 "\\begin{itemize}\n"
 "    \\item Nemůžete postavit \\svgunit{golden} Obydlí.\n"
-"    \\item Můžete předat Jednotky jinému hráči, dokonce i mimo svůj tah, pokud je jeden z vašich Hrdinů:\n"
+"    \\item Můžete předat Jednotky jinému hráči, dokonce i mimo svůj Tah, pokud je jeden z vašich Hrdinů:\n"
 "    \\begin{itemize}\n"
-"        \\item Na stejném dílku Mapy jako Hrdina jiného hráče.\n"
+"        \\item Na stejném Dílku Mapy jako Hrdina jiného hráče.\n"
 "        \\item Ve Městě jiného hráče.\n"
 "        \\item Vedle Hrdiny jiného hráče.\n"
 "    \\end{itemize}\n"
-"    \\item Pokud nemáte žádné Jednotky ve svém balíčku Jednotek (po bitvě nebo pokud si neuchováte alespoň jednu Jednotku), vraťte všechny své Jednotky do balíčku Jednotek své Frakce (i když jiný hráč má jednu nebo více vašich Jednotek). To zahrnuje i Jednotky, které jste dříve předali jinému hráči.\n"
-"    \\item Když jste ve městě jiného hráče, můžete Naverbovat nebo Posílit jejich Jednotky, buď pro daného hráče nebo pro sebe. Potřebujete k tomu povolení druhého hráče, a musí k tomu být postavena odpovídající Obydlí nebo Citadela.\n"
-"    \\item Pro poslední boj o Důl/Osadu přidejte \\svgunit{golden} Neutrální Jednotku. Pro tento boj máte neomezený počet tahů. K přeskočení tohoto boje nemůžete použít Expertní Diplomacii!\n"
-"    \\item Poprvé, když dosáhnete úrovně IV, získáte svou druhou specializaci.\n"
-"    \\item Když dosáhnete úrovně IV, přesuňte svůj žeton na počítadle úrovní na úroveň III.\n"
+"    \\item Pokud nemáte žádné Jednotky ve svém Balíčku Jednotek (po bitvě nebo pokud si neuchováte alespoň jednu Jednotku), vraťte všechny své Jednotky do Balíčku Jednotek své Frakce (i když jiný hráč má jednu nebo více vašich Jednotek). To zahrnuje i Jednotky, které jste dříve předali jinému hráči.\n"
+"    \\item Když jste ve Městě jiného hráče, můžete Naverbovat nebo Posílit jejich Jednotky, buď pro daného hráče nebo pro sebe. Potřebujete k tomu povolení druhého hráče, a musí k tomu být postavena odpovídající Obydlí nebo Citadela.\n"
+"    \\item Pro poslední Boj o Důl/Osadu přidejte \\svgunit{golden} Neutrální Jednotku. Pro tento Boj máte neomezený počet Tahů. K přeskočení tohoto Boje nemůžete použít Expertní Diplomacii!\n"
+"    \\item Poprvé, když dosáhnete Úrovně IV, získáte svou druhou specializaci.\n"
+"    \\item Když dosáhnete Úrovně IV, přesuňte svůj Žeton na počítadle Úrovní na Úroveň III.\n"
 "    \\item Navíc žádný hráč nemůže:\n"
 "    \\begin{itemize}\n"
 "        \\item Útočit na jiné Hrdiny.\n"
-"        \\item Zmocnit se Dolu nebo Osady, které jsou již obsazeny.\n"
+"        \\item Zmocnit se Dolu nebo Osady, které jsou již Obsazeny.\n"
 "    \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
@@ -417,22 +366,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:100
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{center}\n"
-#| "  \\includegraphics[width=0.2\\paperwidth]{\\maps/emerald-1.png}\n"
-#| "  \\captionof{figure}{1-PLAYER SCENARIO}\n"
-#| "  \\vspace{3em}\n"
-#| "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-2.png}\n"
-#| "  \\captionof{figure}{2-PLAYER SCENARIO}\n"
-#| "  \\vspace{3em}\n"
-#| "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-3.png}\n"
-#| "  \\captionof{figure}{3-PLAYER SCENARIO}\n"
-#| "  \\vspace{3em}\n"
-#| "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-4.png}\n"
-#| "  \\captionof{figure}{4-PLAYER SCENARIO}\n"
-#| "\\end{center}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{center}\n"
 "  \\includegraphics[width=0.2\\paperwidth]{\\maps/emerald-1.png}\n"
@@ -451,15 +385,15 @@ msgid ""
 msgstr ""
 "\\begin{center}\n"
 "  \\includegraphics[width=0.2\\paperwidth]{\\maps/emerald-1.png}\n"
-"  \\captionof{figure}{SCÉNÁŘ PRO 1 HRÁČE}\n"
+"  \\captionof{figure}{\\textbf{SCÉNÁŘ PRO 1 HRÁČE}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-2.png}\n"
-"  \\captionof{figure}{SCÉNÁŘ PRO 2 HRÁČE}\n"
+"  \\captionof{figure}{\\textbf{SCÉNÁŘ PRO 2 HRÁČE}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-3.png}\n"
-"  \\captionof{figure}{SCÉNÁŘ PRO 3 HRÁČE}\n"
+"  \\captionof{figure}{\\textbf{SCÉNÁŘ PRO 3 HRÁČE}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-4.png}\n"
-"  \\captionof{figure}{SCÉNÁŘ PRO 4 HRÁČE}\n"
+"  \\captionof{figure}{\\textbf{SCÉNÁŘ PRO 4 HRÁČE}}\n"
 "\\end{center}\n"
 "\n"
