--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -72,12 +72,12 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:42 campaigns/inferno_devilish_plan.tex:67
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve Scénáři:\n"
 "\n"
 
 #. type: multicols*
@@ -208,15 +208,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:20
-#, fuzzy, no-wrap
-#| msgid ""
-#| "This scenario plays out over 13 rounds.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "This Scenario plays out over 13 Rounds.\n"
 "\n"
 msgstr ""
-"Tento scénář se hraje na 13 kol.\n"
+"Tento Scénář se hraje na 13 Kol.\n"
 "\n"
 
 #. type: multicols*
@@ -284,15 +281,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:46
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Bonus:} Choose one of the following options:\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Add a ``Slayer'' spell to your hand\n"
-#| "  \\item Add the ``Armor of Wonder'' Artifact to your hand\n"
-#| "  \\item Reinforce Magogs and gain 1 \\svg{valuables}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Bonus:} Choose one of the following options:\n"
 "\\begin{itemize}\n"
@@ -304,7 +293,7 @@ msgid ""
 msgstr ""
 "\\textbf{Bonus:} Zvolte jednu z následujících možností:\n"
 "\\begin{itemize}\n"
-"  \\item Přidejte si kouzlo \\uv{Zabiják} do ruky\n"
+"  \\item Přidejte si Kouzlo \\uv{Zabiják} do ruky\n"
 "  \\item Přidejte si Artefakt \\uv{Brnění Zázraků} do ruky\n"
 "  \\item Posilte Magogy a získejte 1 \\svg{valuables}\n"
 "\\end{itemize}\n"
@@ -314,7 +303,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:48
 #: campaigns/inferno_steadwicks_fall.tex:48
 #: campaigns/inferno_deal_with_the_devil.tex:46
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{AI Hero Setup}}\n"
 "\n"
@@ -344,13 +333,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:57
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item \\textbf{Gold Dragon Army:} A Pack of Gold Dragons, a Pack of Unicorns, a Pack of Dendroids, a Pack of Centaurs\n"
-#| "  \\item \\textbf{Ivor's Army:} A Few Elves\\footnote{In Round 9, the Few Elves in Ivor's Army are reinforced to a Pack of Elves.}, Neutral Army at the same level as your Hero level\\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Gold Dragon Army:} A Pack of Gold Dragons, a Pack of Unicorns, a Pack of Dendroids, a Pack of Centaurs\n"
@@ -360,7 +343,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Armáda Zlatých Draků:} Skupina Zlatých Draků, skupina Jednorožců, skupina Dendroidů, skupina Kentaurů\n"
-"  \\item \\textbf{Ivorova Armáda:} Málo Elfů\\footnote{V 9. kole je Málo Elfů v Ivorově armádě posíleno na Skupinu Elfů.}, Neutrální armáda na úrovni vašeho Hrdiny\\footnote{Viz strana 35, \\uv{Tabulka Obtížnosti Pole} v základních pravidlech, pro další podrobnosti o počtu Neutrálních Jednotek, které musíte dobrat pro tuto Neutrální Armádu.}\n"
+"  \\item \\textbf{Ivorova Armáda:} Málo Elfů\\footnote{V 9. Kole je Málo Elfů v Ivorově armádě posíleno na Skupinu Elfů.}, Neutrální armáda na úrovni vašeho Hrdiny\\footnote{Viz strana 35, \\uv{Tabulka Obtížnosti Pole} v Základních Pravidlech, pro další podrobnosti o počtu Neutrálních Jednotek, které musíte dobrat pro tuto Neutrální Armádu.}\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -376,15 +359,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:61
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} Unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
 "\n"
 msgstr ""
-"\\textbf{Ivorův Balíček Kouzel:} 1 × karta Kouzla Přesnosti (je použita na první \\svg{unit_ranged} jednotku schopnou útoku na dálku), 1 × karta Kouzla Magický Šíp\n"
+"\\textbf{Ivorův Balíček Kouzel:} 1 × karta Kouzla Přesnost (je použita na první \\svg{unit_ranged} Jednotku schopnou útoku na dálku), 1 × karta Kouzla Magický Šíp\n"
 "\n"
 
 #. type: multicols*
@@ -399,14 +379,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:73
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{2 × Starting (I) Map tile}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 1 × Inferno (S6)\n"
-#| "  \\item 1 × Rampart (S4)\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{2 × Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
@@ -424,14 +397,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:79
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{3 × Far (II--III) Map tile}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item \\mbox{2 × Inferno (choose from: F16--F18, \\#F10)}\n"
-#| "  \\item 1 × Rampart (choose from: F10--F12)\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{3 × Far (II--III) Map Tile}\n"
 "\\begin{itemize}\n"
@@ -449,13 +415,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:84
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{2 × Near (IV--V) Map tile}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 2 × Rampart (N7, N8)\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{2 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
@@ -471,13 +431,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:89
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{1 × Center (VI--VII) Map tile}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 1 × Dragon Utopia Center Map tile (C1)\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{1 × Center (VI--VII) Map Tile}\n"
 "\\begin{itemize}\n"
@@ -495,7 +449,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:91
 #: campaigns/inferno_steadwicks_fall.tex:97
 #: campaigns/inferno_deal_with_the_devil.tex:100
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Heroes Placement}}\n"
 "\n"
@@ -505,31 +459,24 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:94
-#, fuzzy, no-wrap
-#| msgid ""
-#| "The Enemy Hero is represented by one Rampart faction Hero model of your choice\n"
-#| "and appears in the center field of the S4 Starting Map tile.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "The Enemy Hero is represented by one Rampart Faction Hero model of your choice\n"
 "and appears in the center Field of the S4 Starting Map Tile.\n"
 "\n"
 msgstr ""
 "Nepřátelský Hrdina je reprezentován libovolným modelem Hrdiny Frakce Bašta\n"
-"a objeví se na středovém poli Startovního Dílku Mapy S4.\n"
+"a objeví se na středovém Poli Startovního Dílku Mapy S4.\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:96
-#, fuzzy, no-wrap
-#| msgid ""
-#| "Place your Hero in the center field of the Inferno Starting Map tile.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "Place your Hero in the center Field of the Inferno Starting Map Tile.\n"
 "\n"
 msgstr ""
-"Umístěte svého Hrdinu na středové pole Startovního Dílku Peklo.\n"
+"Umístěte svého Hrdinu na středové Pole Startovního Dílku Peklo.\n"
 "\n"
 
 #. type: multicols*
@@ -559,7 +506,7 @@ msgid ""
 "You fail to defeat the Enemy Hero and the Gold Dragon Armies by the end of the Round 13.\n"
 "\n"
 msgstr ""
-"Nepodaří se vám porazit Nepřátelského Hrdinu a Armády Zlatých Draků do konce 13. kola.\n"
+"Nepodaří se vám porazit Nepřátelského Hrdinu a Armády Zlatých Draků do konce 13. Kola.\n"
 "\n"
 
 #. type: multicols*
@@ -575,7 +522,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{1. kolo:}\n"
+"\\textbf{1. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Čtěte: \\uv{Naši podřízení si vedli dobře. Podařilo se jim vztyčit sopku\n"
 "    a postavit pevnost v řídce osídleném lese těsně za hranicemi Erathie.\n"
@@ -597,7 +544,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{2. kolo:}\n"
+"\\textbf{2. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Čtěte: \\uv{Královna Zlatých Draků je mocnou spojenkyní AvLee.\n"
 "    Musíte najít její doupě a zajistit její zánik, protože to výrazně oslabí\n"
@@ -617,7 +564,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{9. kolo:}\n"
+"\\textbf{9. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Málo Elfů z Ivorovy Armády je Posíleno na skupinu Elfů.\n"
 "    Ivorova Armáda také získává Vozík s Municí.\n"
@@ -634,7 +581,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{10. kolo:}\n"
+"\\textbf{10. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Město Frakce Bašta, ve kterém sídlí Ivorova Armáda, získává Střílnu.\n"
 "\\end{itemize}\n"
@@ -642,13 +589,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:140
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{13} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item At the end of the round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{13} Round:}\n"
 "\\begin{itemize}\n"
@@ -656,21 +597,15 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{13. kolo:}\n"
+"\\textbf{13. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Na konci kola, pokud nejsou Nepřátelský Hrdina a Armády Zlatých Draků poraženi, je vše ztraceno -- prohráváte!\n"
+"  \\item Na konci Kola, pokud nejsou Nepřátelský Hrdina a Armády Zlatých Draků poraženi, je vše ztraceno -- prohráváte!\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:145
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{When you complete the scenario:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Read: ``Congratulations! You have completed your quest to kill the fearsome beast, and can claim victory!''\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{When you complete the Scenario:}\n"
 "\\begin{itemize}\n"
@@ -678,7 +613,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Když dokončíte scénář:}\n"
+"\\textbf{Když dokončíte Scénář:}\n"
 "\\begin{itemize}\n"
 "  \\item Čtěte: \\uv{Gratulujeme! Dokončili jste svůj úkol zabít obávanou bestii zvítězili jste!}\n"
 "\\end{itemize}\n"
@@ -688,27 +623,17 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:150
 #: campaigns/inferno_steadwicks_fall.tex:190
 #: campaigns/inferno_deal_with_the_devil.tex:175
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "During this ``Inferno'' Campaign Scenario, the following rules apply:\n"
 "\n"
 msgstr ""
-"Během tohoto scénáře kampaně \\uv{Peklo} platí následující pravidla:\n"
+"Během tohoto Scénáře Kampaně \\uv{Peklo} platí následující pravidla:\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:159
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "    \\item Your Hero does not gain Experience past Level 5.\n"
-#| "    \\item The Enemy Hero does not move and only waits in their Town. They start with Walls and a Gate on their side of the Combat Board.\n"
-#| "    \\item The N7 Map tile cannot be entered until Ivor is defeated.\n"
-#| "    \\item At the Dragon Utopia location, your Hero fights the Gold Dragons Army.\n"
-#| "    \\item The ``Castle Gate'' cannot be built.\n"
-#| "    \\item If your Hero visits an Obelisk, you may Search (2) the Ability deck, the Artifact deck, or the Spell deck.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "    \\item Your Hero does not gain Experience past Level 5.\n"
@@ -726,7 +651,7 @@ msgstr ""
 "    \\item Na Dílek Mapy N7 nelze vstoupit, dokud není Ivor poražen.\n"
 "    \\item Na lokaci Dračí Utopie bojuje váš Hrdina s Armádou Zlatých Draků.\n"
 "    \\item \\uv{Hradní Bránu} nelze postavit.\n"
-"    \\item Pokud váš Hrdina navštíví Obelisk, můžete Hledat (2) v balíčku Dovedností, Artefaktů nebo Kouzel.\n"
+"    \\item Pokud váš Hrdina navštíví Obelisk, můžete Hledat (2) v Balíčku Dovedností, Artefaktů nebo Kouzel.\n"
 "\\end{itemize}\n"
 "\n"
 
