--- a/translations/recommendations.tex/cs.po
+++ b/translations/recommendations.tex/cs.po
@@ -92,14 +92,7 @@ msgstr ""
 
 #. type: multicols
 #: sections/recommendations.tex:24
-#, fuzzy, no-wrap
-#| msgid ""
-#| "Where:\n"
-#| "\\begin{itemize}\n"
-#| "  \\item[$\\textbf{P}$] -- number of players\n"
-#| "  \\item[$\\textbf{R}$] -- number of rounds\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "Where:\n"
 "\\begin{itemize}\n"
@@ -111,23 +104,19 @@ msgstr ""
 "Kde:\n"
 "\\begin{itemize}\n"
 "  \\item[$\\textbf{H}$] -- počet hráčů\n"
-"  \\item[$\\textbf{K}$] -- počet kol\n"
+"  \\item[$\\textbf{K}$] -- počet Kol\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols
 #: sections/recommendations.tex:27
-#, fuzzy, no-wrap
-#| msgid ""
-#| "For example, if you're playing a 3-player scenario consisting of 12 rounds, you can easily calculate that $3 \\times 12 \\times 5 = 180$.\n"
-#| "Your expected minimal play time would be around 3 hours.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "For example, if you're playing a 3-player Scenario consisting of 12 Rounds, you can easily calculate that $3 \\times 12 \\times 5 = 180$.\n"
 "Your expected minimal play time would be around 3 hours.\n"
 "\n"
 msgstr ""
-"Například pokud hrajete scénář pro 3 hráče skládající se z 12 kol, můžete snadno vypočítat, že $3 \\times 12 \\times 5 = 180$.\n"
+"Například pokud hrajete Scénář pro 3 hráče skládající se z 12 Kol, můžete snadno vypočítat, že $3 \\times 12 \\times 5 = 180$.\n"
 "Vaše očekávaná minimální herní doba bude kolem 3 hodin.\n"
 "\n"
 
@@ -155,17 +144,13 @@ msgstr ""
 
 #. type: multicols
 #: sections/recommendations.tex:35
-#, fuzzy, no-wrap
-#| msgid ""
-#| "Except for the Magic Arrow, each spell appears exactly twice in the spell deck.\n"
-#| "After players prepare their starting M\\&M decks, it is recommended to remove Magic Arrows from the spell deck until no more than two remain.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "Except for the Magic Arrow, each Spell appears exactly twice in the Spell Deck.\n"
 "After players prepare their starting M\\&M Decks, it is recommended to remove Magic Arrows from the Spell Deck until no more than two remain.\n"
 "\n"
 msgstr ""
-"Kromě Magického Šípu se každé kouzlo v Balíčku Kouzel objevuje přesně dvakrát.\n"
+"Kromě Magického Šípu se každé Kouzlo v Balíčku Kouzel objevuje přesně dvakrát.\n"
 "Po přípravě Startovních M\\&M Balíčků všech hráčů se doporučuje odstranit Magické Šípy z Balíčku Kouzel, dokud nezůstanou více než dva.\n"
 "\n"
 
@@ -181,15 +166,12 @@ msgstr ""
 
 #. type: multicols
 #: sections/recommendations.tex:39
-#, fuzzy, no-wrap
-#| msgid ""
-#| "Although rules as written state that you can remove only one card from your hand while visiting a Trading Post, it is recommended to allow removing as many as you like.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "Although rules as written state that you can remove only one card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.\n"
 "\n"
 msgstr ""
-"I když pravidla říkají, že při návštěvě Tržiště můžete odstranit pouze jednu kartu z ruky, doporučuje se povolit odstranění libovolného počtu karet.\n"
+"I když pravidla říkají, že při Navštívení Tržiště můžete odstranit pouze jednu kartu z ruky, doporučuje se povolit odstranění libovolného počtu karet.\n"
 "\n"
 
 #. type: multicols
@@ -212,15 +194,12 @@ msgstr ""
 
 #. type: multicols
 #: sections/recommendations.tex:45
-#, fuzzy, no-wrap
-#| msgid ""
-#| "During combat with Neutral Units in clash scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle board, the player positioning the Neutral Units must do the same.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.\n"
 "\n"
 msgstr ""
-"Pokud se během boje s Neutrálními Jednotkami ve scénářích Střet hráč rozhodne umístit své Jednotky pouze na jednu polovinu (levou nebo pravou) Desky Bojiště, hráč umisťující Neutrální Jednotky musí udělat totéž.\n"
+"Pokud se během Boje s Neutrálními Jednotkami ve Scénářích Střet hráč rozhodne umístit své Jednotky pouze na jednu polovinu (levou nebo pravou) Desky Bojiště, hráč umisťující Neutrální Jednotky musí udělat totéž.\n"
 "\n"
 
 #. type: multicols
@@ -289,24 +268,7 @@ msgstr ""
 
 #. type: figure*
 #: sections/recommendations.tex:94
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[!h]\n"
-#| "  \\mbox{}\n"
-#| "  \\hfill\n"
-#| "  \\begin{minipage}[t]{0.44\\textwidth}\n"
-#| "    \\centering\n"
-#| "    \\includegraphics[width=\\linewidth]{\\examples/battle_exception.png}\n"
-#| "    \\caption[exception protected]{\\textit{\\textbf{Exception:} Three non-\\svg{unit_ranged} Units must be positioned on the front line.}}\n"
-#| "  \\end{minipage}\n"
-#| "  \\hfill\n"
-#| "  \\begin{minipage}[t]{0.44\\textwidth}\n"
-#| "    \\centering\n"
-#| "    \\includegraphics[width=\\linewidth]{\\examples/battle_ranged_bad.png}\n"
-#| "    \\caption[ranged protected]{\\textit{The Boars must occupy one of the green fields.}}\n"
-#| "  \\end{minipage}\n"
-#| "  \\hfill\n"
-#| "  \\mbox{}"
+#, no-wrap
 msgid ""
 "[!h]\n"
 "  \\mbox{}\n"
@@ -337,7 +299,7 @@ msgstr ""
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_ranged_bad.png}\n"
-"    \\caption[ranged protected]{\\textit{Kanci musí obsadit jedno ze zelených políček.}}\n"
+"    \\caption[ranged protected]{\\textit{Kanci musí obsadit jedno ze zelených Polí.}}\n"
 "  \\end{minipage}\n"
 "  \\hfill\n"
 "  \\mbox{}"
@@ -354,10 +316,7 @@ msgstr ""
 
 #. type: multicols
 #: sections/recommendations.tex:100
-#, fuzzy, no-wrap
-#| msgid ""
-#| "The following are not custom rules but rather recommendations to help you get the most out of your game:\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "The following are not custom rules, but rather recommendations to help you get the most out of your game:\n"
 "\n"
@@ -367,15 +326,7 @@ msgstr ""
 
 #. type: multicols
 #: sections/recommendations.tex:107
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item When deciding which building to construct in your town, especially in the early game, it is \\textit{usually} best to prioritize Units over the City Hall, Citadel, Mage Guild, or other faction-specific buildings.\n"
-#| "  \\item If you're unsure which Spell, Artifact, or Ability to choose, prioritize those that help you cycle through your deck.\n"
-#| "    This includes any cards that allow you to draw cards or retrieve cards from your discard pile.\n"
-#| "  \\item Try to avoid using your Main Hero's movement points for actions that your Secondary Hero can handle, such as flipping the Map tiles, visiting Water Wheels, and so on.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When deciding which building to construct in your Town, especially in the early game, it is \\textit{usually} best to prioritize Units over the City Hall, Citadel, Mage Guild, or other Faction-specific buildings.\n"
@@ -386,8 +337,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Při rozhodování, kterou budovu postavit ve vašem městě, zejména na začátku hry, je \\textit{obvykle} nejlepší upřednostnit Jednotky před Radnicí, Citadelou, Cechem Mágů nebo jinými budovami Frakce.\n"
-"  \\item Pokud si nejste jisti, které Kouzlo, Artefakt nebo Dovednost zvolit, upřednostněte ty, které vám pomohou procházet vaším balíčkem.\n"
+"  \\item Při rozhodování, kterou budovu postavit ve vašem Městě, zejména na začátku hry, je \\textit{obvykle} nejlepší upřednostnit Jednotky před Radnicí, Citadelou, Cechem Mágů nebo jinými budovami Frakce.\n"
+"  \\item Pokud si nejste jisti, které Kouzlo, Artefakt nebo Dovednost zvolit, upřednostněte ty, které vám pomohou procházet vaším Balíčkem.\n"
 "    To zahrnuje jakékoli karty, které vám umožňují dobrat karty nebo získat karty z vaší Odhazovací Hromádky.\n"
 "  \\item Snažte se vyhnout používání Bodů Pohybu vašeho Hlavního Hrdiny na akce, které může zvládnout váš Vedlejší Hrdina, jako je otáčení Dílků Mapy, návštěva Vodních Kol a podobně.\n"
 "\\end{itemize}\n"
