--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -19,15 +19,11 @@ msgstr ""
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: coops/sentinels.tex:3
-#, fuzzy
-#| msgid ""
-#| "\\addscenariosection{1}{Cooperative scenario}{Sentinels}{\\images/"
-#| "sentinel.png}"
 msgid ""
 "\\addscenariosection{1}{Cooperative Scenario}{Sentinels}{\\images/sentinel."
 "png}"
 msgstr ""
-"\\addscenariosection{1}{Kooperativní scéná\\v{r}}{Strážci}{\\images/sentinel."
+"\\addscenariosection{1}{Kooperativní Scéná\\v{r}}{Strážci}{\\images/sentinel."
 "png}"
 
 #. type: multicols*
@@ -93,15 +89,12 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:18
-#, fuzzy, no-wrap
-#| msgid ""
-#| "This scenario is played over 12 rounds.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "This Scenario is played over 12 Rounds.\n"
 "\n"
 msgstr ""
-"Tento scénář se hraje na 12 kol.\n"
+"Tento Scénář se hraje na 12 Kol.\n"
 "\n"
 
 #. type: multicols*
@@ -150,7 +143,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:32 clash/the_hunt.tex:29
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -161,8 +154,8 @@ msgid ""
 msgstr ""
 "\\textbf{Počáteční Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Skupinu \\svgunit{bronze} jednotek s \\textit{nejnižšími} náklady na Verbování\n"
-"  \\item Málo \\svgunit{bronze} jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item Skupinu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item Málo \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -178,15 +171,12 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:36
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Map tile Pool:} Each player takes 1 random Near (IV--V) Map tile and 1 random Far (II--III) Map tile. These tiles should not contain any Obelisks.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
-"\\textbf{Dílky Mapy na ruce:} Každý hráč si vezme 1 náhodný Blízký (IV--V) Dílek Mapy a 1 náhodný Vzdálený (II--III) Dílek Mapy. Tyto dílky by neměly obsahovat žádné Obelisky.\n"
+"\\textbf{Dílky Mapy na ruce:} Každý hráč si vezme 1 náhodný Blízký (IV--V) Dílek Mapy a 1 náhodný Vzdálený (II--III) Dílek Mapy. Tyto Dílky by neměly obsahovat žádné Obelisky.\n"
 "\n"
 
 #. type: multicols
@@ -215,24 +205,17 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:42 campaigns/inferno_devilish_plan.tex:67
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve Scénáři:\n"
 "\n"
 
 #. type: multicols
 #: coops/sentinels.tex:48
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{2 × Starting (I) Map tile}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Starting Tiles of your chosen factions\n"
-#| "  \\item Ignore their yellow borders\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{2 × Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
@@ -250,10 +233,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:50
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{4 × Far (II--III) Map tile}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{4 × Far (II--III) Map Tile}\n"
 "\n"
@@ -263,13 +243,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:55
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{4 × Near (IV--V) Map tile}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item All Near Map tiles must have Obelisks\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{4 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
@@ -326,15 +300,12 @@ msgid ""
 "An undefeated enemy army remains at the end of Round 12.\n"
 "\n"
 msgstr ""
-"Na konci 12. kola stále existuje neporažená nepřátelská armáda.\n"
+"Na konci 12. Kola stále existuje neporažená nepřátelská armáda.\n"
 "\n"
 
 #. type: multicols
 #: coops/sentinels.tex:65
-#, fuzzy, no-wrap
-#| msgid ""
-#| "One of your towns is captured, or a main hero is defeated in a battle (retreat doesn't count).\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "One of your Towns is captured, or a Main Hero is defeated in a battle (retreat doesn't count).\n"
 "\n"
@@ -367,7 +338,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{6. kolo:}\n"
+"\\textbf{6. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Odstraňte všechny Černé Kostičky ze všech Větrných Mlýnů, Vodních Kol a Mystických Zahrad na mapě.\n"
 "  \\item Vyvolejte nepřátelskou armádu podle níže uvedených pravidel.\n"
@@ -384,7 +355,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{7. a 8. kolo:}\n"
+"\\textbf{7. a 8. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Vyvolejte nepřátelskou armádu podle níže uvedených pravidel.\n"
 "\\end{itemize}\n"
@@ -400,9 +371,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{9. kolo:}\n"
+"\\textbf{9. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Opakujte Časované Události ze 6. kola.\n"
+"  \\item Opakujte Časované Události ze 6. Kola.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -417,9 +388,9 @@ msgid ""
 "\\vspace{-0.5em}\n"
 "\n"
 msgstr ""
-"\\textbf{10. kolo:}\n"
+"\\textbf{10. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Opakujte Časované Události ze 7. a 8. kola.\n"
+"  \\item Opakujte Časované Události ze 7. a 8. Kola.\n"
 "\\end{itemize}\n"
 "\\vspace{-0.5em}\n"
 "\n"
@@ -439,19 +410,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:102
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Players can trade resources when one of the active player's heroes visits a trading post or stands on a field adjacent to an allied hero.\n"
-#| "  \\item The hero who defeats an enemy army gains 2 \\svg{experience}.\n"
-#| "    The victorious player rolls two Treasure Dice and resolves one of them.\n"
-#| "  \\item Additionally, no player can:\n"
-#| "  \\begin{itemize}\n"
-#| "      \\item Attack other Heroes.\n"
-#| "      \\item Capture a Mine or Settlement that is already Flagged.\n"
-#| "  \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Players can trade resources when one of the active player's Heroes Visits a trading post or stands on a Field adjacent to an allied Hero.\n"
@@ -466,7 +425,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Hráči mohou obchodovat se surovinami, když jeden z Hrdinů aktivního hráče navštíví Tržiště nebo stojí na poli sousedícím se spojeneckým Hrdinou.\n"
+"  \\item Hráči mohou obchodovat se surovinami, když jeden z Hrdinů aktivního hráče navštíví Tržiště nebo stojí na Poli sousedícím se spojeneckým Hrdinou.\n"
 "  \\item Hrdina, který porazí nepřátelskou armádu, získá 2 \\svg{experience}.\n"
 "    Vítězný hráč hodí dvěma Kostkami Pokladu a vyřeší jednu z nich.\n"
 "  \\item Navíc žádný hráč nemůže:\n"
@@ -489,28 +448,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:124
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Enemy armies spawn on a random Obelisk field (use hero miniatures from factions not in play).\n"
-#| "  \\item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:\n"
-#| "  \\begin{itemize}\n"
-#| "    \\item $+1$/$+1$ = North\n"
-#| "    \\item $+1$/$-1$ = East\n"
-#| "    \\item $-1$/$+1$ = West\n"
-#| "    \\item $-1$/$-1$ = South\n"
-#| "  \\end{itemize}\n"
-#| "  \\item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.\n"
-#| "  Rounds 8 and 10 are entirely random.\n"
-#| "  \\item If the tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.\n"
-#| "  \\item If there is a hero on the field where the enemy spawns, a fight starts immediately.\n"
-#| "  \\item Enemy armies move at the end of every turn, starting with the turn they spawned.\n"
-#| "  \\item Enemy armies have 3 MPs per round.\n"
-#| "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
-#| "    Place Black cubes on any field they pass through, treating those fields as empty from that point on.\n"
-#| "  \\item If an enemy's movement could go in different directions, the players decide which way they go.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Enemy armies spawn on a random Obelisk Field (use Hero miniatures from Factions not in play).\n"
@@ -534,22 +472,22 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Nepřátelské armády se objevují na náhodném poli s Obeliskem (použijte miniatury Hrdinů z frakcí, které nejsou ve hře).\n"
-"  \\item Určete pole s Obeliskem tím, že hodíte 2 Kostkami Útoku. Aplikujte výsledky následujícím způsobem (K1/K2), při 0 hážete znovu:\n"
+"  \\item Nepřátelské armády se objevují na náhodném Poli s Obeliskem (použijte miniatury Hrdinů z Frakcí, které nejsou ve hře).\n"
+"  \\item Určete Pole s Obeliskem tím, že hodíte 2 Kostkami Útoku. Aplikujte výsledky následujícím způsobem (K1/K2), při 0 hážete znovu:\n"
 "  \\begin{itemize}\n"
 "    \\item $+1$/$+1$ = Sever\n"
 "    \\item $+1$/$-1$ = Východ\n"
 "    \\item $-1$/$+1$ = Západ\n"
 "    \\item $-1$/$-1$ = Jih\n"
 "  \\end{itemize}\n"
-"  \\item V 7. a 9. kole házejte pro vyváženější rozložení pouze druhou Kostkou Útoku (K2). Pro K1 vezměte opačný výsledek hodu z předchozího kola.\n"
+"  \\item V 7. a 9. Kole házejte pro vyváženější rozložení pouze druhou Kostkou Útoku (K2). Pro K1 vezměte opačný výsledek hodu z předchozího Kola.\n"
 "  Kola 8 a 10 jsou zcela náhodná.\n"
-"  \\item Pokud dílek, kde se má nepřítel objevit, ještě nebyl objeven, otočte jej a libovolně orientujte.\n"
-"  \\item Pokud je na poli, kde se nepřítel objeví, Hrdina, začne okamžitě boj.\n"
+"  \\item Pokud Dílek, kde se má nepřítel objevit, ještě nebyl objeven, otočte jej a libovolně orientujte.\n"
+"  \\item Pokud je na Poli, kde se nepřítel objeví, Hrdina, začne okamžitě Boj.\n"
 "  \\item Nepřátelské armády se pohybují na konci každého tahu, počínaje tahem, kdy se objevily.\n"
-"  \\item Nepřátelské armády mají 3 MP za kolo.\n"
+"  \\item Nepřátelské armády mají 3 MP za Kolo.\n"
 "  \\item Nepřátelské armády se pohybují, jak je popsáno v pravidlech (str.\\,33), ale místo obsazování ničí vše, co jim stojí v cestě.\n"
-"    Umístěte černé kostky na jakékoliv pole, kterým projdou, a od toho okamžiku považujte tato pole za prázdná.\n"
+"    Umístěte Černé Kostičky na jakékoliv Pole, kterým projdou, a od toho okamžiku považujte tato Pole za prázdná.\n"
 "  \\item Pokud by se nepřátelský pohyb mohl ubírat různými směry, hráči rozhodnou, kterým směrem půjdou.\n"
 "\\end{itemize}\n"
 "\n"
@@ -566,16 +504,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:134
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Fighting enemy armies over more than one Combat Round does not cost Movement Points.\n"
-#| "  \\item During a battle with an enemy army, a hero can retreat whenever a friendly unit is about to activate.\n"
-#| "    A retreating main Hero loses all remaining MPs and is returned to an allied town or settlement of their choice, keeping all remaining units.\n"
-#| "  \\item Retreating secondary heroes are removed from the game, but their remaining units are kept.\n"
-#| "  \\item Killed enemy units do not respawn.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Fighting enemy armies over more than one Combat Round does not cost Movement Points.\n"
@@ -587,9 +516,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Boj s nepřátelskými armádami přes více než jedno bojové kolo nestojí žádné Body Pohybu.\n"
+"  \\item Boj s nepřátelskými armádami přes více než jedno Kolo Boje nestojí žádné Body Pohybu.\n"
 "  \\item Během bitvy s nepřátelskou armádou může Hrdina ustoupit kdykoliv, když se má Aktivovat přátelská Jednotka.\n"
-"    Ustupující hlavní Hrdina ztrácí všechny zbývající Body Pohybu a je vrácen do spojeneckého Města nebo Osady dle svého výběru, přičemž si ponechává všechny zbývající Jednotky.\n"
+"    Ustupující hlavní Hrdina ztrácí všechny zbývající BP a je vrácen do spojeneckého Města nebo Osady dle svého výběru, přičemž si ponechává všechny zbývající Jednotky.\n"
 "  \\item Ustupující sekundární Hrdinové jsou Odstraněni ze hry, ale jejich zbývající Jednotky jsou ponechány.\n"
 "  \\item Zabité nepřátelské Jednotky se znovu neobjevují.\n"
 "\\end{itemize}\n"
@@ -607,15 +536,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:143
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is reinforced from a fixed pool of neutral units (reinforcement pool = number in brackets in the table below).\n"
-#| "  \\item At the beginning of the \\nth{2} combat round and every following round, 2 units reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 units) to continue the fight until either the player retreats or every neutral unit from the reinforcement pool is killed. \\textit{If the number of enemy units at the beginning of a round is 1 or lower, draw up to a total of 4 units (i.e., there are always 4 or 5 enemy units on the board after reinforcing, if available).}\n"
-#| "  \\item Place the reinforcing units on the enemy base line, starting from the left with the lowest initiative (\\svg{unit_ranged} units first). If necessary, continue on the next line in the same order.\n"
-#| "  \\item When a player retreats, the enemy army draws up to the ``minimum'' of 4 units and takes these as starting units to the next fight.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is Reinforced from a fixed pool of Neutral Units (Reinforcement pool = number in brackets in the table below).\n"
@@ -626,10 +547,10 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item V 10. kole se objeví Armáda Bosse. Je odlišná od předchozích armád, protože je posílena z předem daného fondu Neutrálních Jednotek (posilovací fond = číslo v závorkách v tabulce níže).\n"
-"  \\item Na začátku 2. kola Boje a každého následujícího kola posilují zbývající armádu 2 jednotky z promíchaného posilovacího fondu (až do maxima 5 jednotek), aby pokračovaly v boji, dokud hráč neustoupí nebo dokud nejsou všechny Neutrální Jednotky z posilovacího fondu zabity. \\textit{Pokud je počet nepřátelských jednotek na začátku kola 1 nebo nižší, doplňte až do celkového počtu 4 jednotek (tj. na desce jsou vždy 4 nebo 5 nepřátelských Jednotek po posílení, pokud jsou k dispozici).}\n"
-"  \\item Umístěte posilující jednotky na nepřátelskou základní linii, začněte zleva s nejnižší iniciativou (nejprve \\svg{unit_ranged} jednotky). Pokud je to nutné, pokračujte na další řadu ve stejném pořadí.\n"
-"  \\item Když hráč ustoupí, nepřátelská armáda doplní až do \\uv{minimálního} počtu 4 jednotek a tyto Jednotky si vezme jako výchozí do dalšího Boje.\n"
+"  \\item V 10. Kole se objeví Armáda Bosse. Je odlišná od předchozích armád, protože je posílena z předem daného fondu Neutrálních Jednotek (Posilovací fond = číslo v závorkách v tabulce níže).\n"
+"  \\item Na začátku 2. Kola Boje a každého následujícího Kola posilují zbývající armádu 2 Jednotky z promíchaného Posilovacího fondu (až do maxima 5 Jednotek), aby pokračovaly v Boji, dokud hráč neustoupí nebo dokud nejsou všechny Neutrální Jednotky z Posilovacího fondu zabity. \\textit{Pokud je počet nepřátelských Jednotek na začátku Kola 1 nebo nižší, doplňte až do celkového počtu 4 Jednotek (tj. na desce jsou vždy 4 nebo 5 nepřátelských Jednotek po posílení, pokud jsou k dispozici).}\n"
+"  \\item Umístěte posilující Jednotky na nepřátelskou základní linii, začněte zleva s nejnižší iniciativou (nejprve \\svg{unit_ranged} Jednotky). Pokud je to nutné, pokračujte na další řadu ve stejném pořadí.\n"
+"  \\item Když hráč ustoupí, nepřátelská armáda doplní až do \\uv{minimálního} počtu 4 Jednotek a tyto Jednotky si vezme jako výchozí do dalšího Boje.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -715,13 +636,9 @@ msgstr ""
 
 #. type: footnotetext{#2}
 #: coops/sentinels.tex:194
-#, fuzzy
-#| msgid ""
-#| "Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is "
-#| "random\\label{azure}."
 msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
-"Vždy 1 jednotka Azurových Draků (výchozí jednotky Armády Bosse). Zbytek je "
+"Vždy 1 Jednotka Azurových Draků (výchozí Jednotky Armády Bosse). Zbytek je "
 "náhodný\\label{azure}."
